--- a/results-summary-component-main/index.html
+++ b/results-summary-component-main/index.html
@@ -20,12 +20,10 @@
       
       <h2>Great</h2>
 
-      <p id="text">You scored higher than 65% of the people who have taken these test</p>
-
+      <p id="text">You scored higher than 65% of the people who have taken these test<p>
     </div>
 
     <div class="boxNumbers">
-
       <p class="sumary">Summary</p>
 
       <div class="inputs" id="reaction">
@@ -42,7 +40,7 @@
           <img src="/results-summary-component-main/assets/images/icon-memory.svg" alt=""> <span class="memory">Memory</span>
         </span>
         <span class="resultNumber" >
-          <span class="selectNumber">80</span> / 100</span>
+          <span class="selectNumber">92</span> / 100</span>
       </div>
 
 
@@ -51,7 +49,7 @@
           <img src="/results-summary-component-main/assets/images/icon-verbal.svg" alt=""><span class="verbal">Verbal</span> 
         </span>
         <span class="resultNumber">
-          <span class="selectNumber">80</span> / 100</span>
+          <span class="selectNumber">61</span> / 100</span>
       </div>
 
 
@@ -60,7 +58,7 @@
           <img src="/results-summary-component-main/assets/images/icon-visual.svg" alt=""><span class="visual">Visual</span> 
         </span>
       <span class="resultNumber">
-        <span class="selectNumber">80</span> / 100</span>
+        <span class="selectNumber">72</span> / 100</span>
       </div>
       <div class="button">
         <p class="btn">Continue</p>
