--- a/newsletter-sign-up-with-success-message-main/thanks.html
+++ b/newsletter-sign-up-with-success-message-main/thanks.html
@@ -13,7 +13,7 @@
     <h1>Thanks for subscribing!<h1>
     <p>A confirmation email has been sent to <span id="emailConfirmation"></span>. Please open it and click the button inside to confirm your subscription</p>
       
-    <button type="submit" class="button" id="dismissBtn">
+    <button type="button" class="button" id="dismissBtn">
       <p>Dismiss message</p>
     </button>
 
