--- a/newsletter-sign-up-with-success-message-main/index.html
+++ b/newsletter-sign-up-with-success-message-main/index.html
@@ -36,7 +36,7 @@
           <input type="email" name="email" id="email" placeholder="email@company.com">
       
         <button type="submit" id="subBtn" class="button" >
-          <p>Subscribe to monthly newsletter</p>
+          Subscribe to monthly newsletter
         </button>
       </form>
       
