--- a/newsletter-sign-up-with-success-message-main/thanks.html
+++ b/newsletter-sign-up-with-success-message-main/thanks.html
@@ -14,7 +14,7 @@
     <p>A confirmation email has been sent to <span id="emailConfirmation"></span>. Please open it and click the button inside to confirm your subscription</p>
       
     <button type="button" class="button" id="dismissBtn">
-      <p>Dismiss message</p>
+      Dismiss message
     </button>
 
   </div>
