ajuste na semântica do HTML

--- a/interactive-rating-component-main/index.html
+++ b/interactive-rating-component-main/index.html
@@ -58,11 +58,11 @@
     </div>
   </section>
   
-  <section>
+  <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="https://github.com/0tarso/0tarso.github.io" target="_blank">Tailison Ramos</a>.
     </div>
-  </section>
+  </footer>
 </body>
 </html>
