--- a/results-summary-component-main/index.html
+++ b/results-summary-component-main/index.html
@@ -1,26 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-  <link href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk:wght@500;700;800&family=Outfit&family=Roboto+Mono&display=swap" rel="stylesheet">
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk:wght@500;700;800&family=Outfit&family=Roboto+Mono&display=swap"
+    rel="stylesheet">
+  <link rel="icon" type="image/png" sizes="32x32"
+    href="./assets/images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | Results summary component</title>
 </head>
+
 <body>
   <div class="container">
+
     <div class="boxResult">
       <p>Your Result</p>
 
       <div class="circle">
         <h1>76<h1>
-        <p class="littleNumberResult">of 100 <p>  
+            <p class="littleNumberResult">of 100
+            <p>
       </div>
-      
+
       <h2>Great</h2>
 
-      <p id="text">You scored higher than 65% of the people who have taken these test<p>
+      <p id="text">You scored higher than 65% of the people who have taken these
+        test
+      <p>
     </div>
 
     <div class="boxNumbers">
@@ -28,7 +37,9 @@
 
       <div class="inputs" id="reaction">
         <span class="resultName">
-          <img src="/results-summary-component-main/assets/images/icon-reaction.svg" alt=""> <span class="reaction">Reaction</span> 
+          <img
+            src="/results-summary-component-main/assets/images/icon-reaction.svg"
+            alt=""> <span class="reaction">Reaction</span>
         </span>
         <span class="resultNumber">
           <span class="selectNumber">80</span> / 100</span>
@@ -37,16 +48,20 @@
 
       <div class="inputs" id="memory">
         <span>
-          <img src="/results-summary-component-main/assets/images/icon-memory.svg" alt=""> <span class="memory">Memory</span>
+          <img
+            src="/results-summary-component-main/assets/images/icon-memory.svg"
+            alt=""> <span class="memory">Memory</span>
         </span>
-        <span class="resultNumber" >
+        <span class="resultNumber">
           <span class="selectNumber">92</span> / 100</span>
       </div>
 
 
       <div class="inputs" id="verbal">
         <span class="resultName">
-          <img src="/results-summary-component-main/assets/images/icon-verbal.svg" alt=""><span class="verbal">Verbal</span> 
+          <img
+            src="/results-summary-component-main/assets/images/icon-verbal.svg"
+            alt=""><span class="verbal">Verbal</span>
         </span>
         <span class="resultNumber">
           <span class="selectNumber">61</span> / 100</span>
@@ -55,21 +70,25 @@
 
       <div class="inputs" id="visual">
         <span class="resultName">
-          <img src="/results-summary-component-main/assets/images/icon-visual.svg" alt=""><span class="visual">Visual</span> 
+          <img
+            src="/results-summary-component-main/assets/images/icon-visual.svg"
+            alt=""><span class="visual">Visual</span>
         </span>
-      <span class="resultNumber">
-        <span class="selectNumber">72</span> / 100</span>
+        <span class="resultNumber">
+          <span class="selectNumber">72</span> / 100</span>
       </div>
       <div class="button">
         <p class="btn">Continue</p>
       </div>
     </div>
-      
+
   </div>
-  
+
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge"
+      target="_blank">Frontend Mentor</a>.
     Coded by <a href="https://github.com/0tarso">Tailison Ramos</a>.
   </div>
 </body>
+
 </html>
