Organização de pastas e teste PWA

--- a/ultraWeb/index.html
+++ b/ultraWeb/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="manifest" href="./manifest.webmanifest" />
     <title>UltraMed Popular</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="./assets/css/index.css">
 </head>
 
 <body>
@@ -14,18 +15,19 @@
         <p class="firstText">FIQUE POR DENTRO</p>
         <p class="secondText">DE TODAS AS</p>
         <p class="thirdText">OFERTAS</p>
-        <img src="./img/logoUltra.svg" alt="" class="logoUltra">
+        <img src="./assets/img/logoUltra.svg" alt="" class="logoUltra">
     </div>
 
 
     <div class="options">
 
-        <img class="firstOptionImg" src="./img/ofertasQuinzena.svg" alt="">
+        <img class="firstOptionImg" src="./assets/img/ofertasQuinzena.svg"
+            alt="">
         <a href="./ofertas.html" class="firstOption">
             OFERTAS DA QUINZENA
         </a>
 
-        <img class="secondOptionImg" src="./img/semanaBebe.svg" alt="">
+        <img class="secondOptionImg" src="./assets/img/semanaBebe.svg" alt="">
         <a href="./semBebe.html" class="secondOption">
             SEMANA DO BEBÊ
         </a>
@@ -39,13 +41,13 @@
 
                 <div class="cardText">
 
-                    <img src="./img/ultracapsLogo.svg" alt="">
+                    <img src="./assets/img/ultracapsLogo.svg" alt="">
                     <p class="cardTextUltra">Sua jornada para uma vida mais
                         saudável começa aqui</p>
                 </div>
 
                 <div class="cardImg">
-                    <img src="./img/ultracaps.svg" alt="">
+                    <img src="./assets/img/ultracaps.svg" alt="">
                 </div>
             </div>
 
@@ -58,7 +60,8 @@
             <div class="cardContent">
 
                 <div class="cardText">
-                    <img class="viventeImg" src="./img/ViventeLogo.svg" alt="">
+                    <img class="viventeImg" src="./assets/img/ViventeLogo.svg"
+                        alt="">
                     <p class="cardTextVivente">Delicie-se com sabores naturais e
                         frescos,
                         provenientes
@@ -66,8 +69,8 @@
                 </div>
 
                 <div class="cardImg">
-                    <img class="viventeProd" src="./img/cháViventeProd.svg"
-                        alt="">
+                    <img class="viventeProd"
+                        src="./assets/img/cháViventeProd.svg" alt="">
                 </div>
             </div>
 
@@ -78,10 +81,10 @@
         <div class="card">
             <div class="cardContent">
                 <div class="cardImg">
-                    <img src="./img/ultracaps.svg" alt="">
+                    <img src="./assets/img/ultracaps.svg" alt="">
                 </div>
                 <div class="cardText">
-                    <img src="./img/ultracapsLogo.svg" alt="">
+                    <img src="./assets/img/ultracapsLogo.svg" alt="">
                     <p>As mior vitamina pro seu corpo ficar em dia pa arrasar no
                         verão e proc viver mais também né</p>
                 </div>
@@ -104,5 +107,6 @@
 
     </footer> -->
 </body>
+<script src="index.js"></script>
 
 </html>
