--- a/ultraWeb/ofertas.html
+++ b/ultraWeb/ofertas.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="ofertas.css">
+  <link rel="stylesheet" href="/ultraWeb/assets/css/ofertas.css">
   <title>UltraOfertas</title>
 </head>
 
 <body>
   <div class="header">
     <p>OFERTAS DA QUINZENA</p>
-    <img src="./img/calendarIconn.svg" alt="">
+    <img src="../ultraWeb/assets/img/calendarIconn.svg" alt="">
   </div>
 
   <div class="box">
@@ -19,7 +19,7 @@
     <div class="boxCard">
 
       <div class="boxCardImg">
-        <img src="./img/niveaProd.svg" alt="">
+        <img src="../ultraWeb/assets/img/niveaProd.svg" alt="">
       </div>
       <div class="boxcardText">
         <div class="product">
@@ -35,7 +35,7 @@
       </div>
     </div>
     <div class="divisor">
-      <img src="./img/divisorItem.svg" alt="">
+      <img src="../ultraWeb/assets/img/divisorItem.svg" alt="">
     </div>
 
 
@@ -43,7 +43,7 @@
     <div class="boxCard">
 
       <div class="boxCardImg">
-        <img src="./img/lençoMiliProd.svg" alt="">
+        <img src="../ultraWeb/assets/img/lençoMiliProd.svg" alt="">
       </div>
       <div class="boxcardText">
         <div class="product">
@@ -59,14 +59,14 @@
       </div>
     </div>
     <div class="divisor">
-      <img src="./img/divisorItem.svg" alt="">
+      <img src="../ultraWeb/assets/img/divisorItem.svg" alt="">
     </div>
 
 
     <div class="boxCard">
 
       <div class="boxCardImg">
-        <img src="./img/babyfreeProd.svg" alt="">
+        <img src="../ultraWeb/assets/img/babyfreeProd.svg" alt="">
       </div>
       <div class="boxcardText">
         <div class="product">
@@ -82,14 +82,14 @@
       </div>
     </div>
     <div class="divisor">
-      <img src="./img/divisorItem.svg" alt="">
+      <img src="../ultraWeb/assets/img/divisorItem.svg" alt="">
     </div>
 
 
     <div class="boxCard">
 
       <div class="boxCardImg">
-        <img src="./img/miliAbsProd.svg" alt="">
+        <img src="../ultraWeb/assets/img/miliAbsProd.svg" alt="">
       </div>
       <div class="boxcardText">
         <div class="product">
@@ -105,12 +105,12 @@
       </div>
     </div>
     <div class="divisor">
-      <img src="./img/divisorItem.svg" alt="">
+      <img src="../ultraWeb/assets/img/divisorItem.svg" alt="">
     </div>
     <div class="boxCard">
 
       <div class="boxCardImg">
-        <img src="./img/kitPanteneProd.svg" alt="">
+        <img src="../ultraWeb/assets/img/kitPanteneProd.svg" alt="">
       </div>
       <div class="boxcardText">
         <div class="product">
@@ -126,12 +126,12 @@
       </div>
     </div>
     <div class="divisor">
-      <img src="./img/divisorItem.svg" alt="">
+      <img src="../ultraWeb/assets/img/divisorItem.svg" alt="">
     </div>
     <div class="boxCard">
 
       <div class="boxCardImg">
-        <img src="./img/closeupProd.svg" alt="">
+        <img src="../ultraWeb/assets/img/closeupProd.svg" alt="">
       </div>
       <div class="boxcardText">
         <div class="product">
@@ -147,7 +147,7 @@
       </div>
     </div>
     <div class="divisor">
-      <img src="./img/divisorItem.svg" alt="">
+      <img src="../ultraWeb/assets/img/divisorItem.svg" alt="">
     </div>
   </div>
 
