--- a/ultraWeb/selenio.html
+++ b/ultraWeb/selenio.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="selenio.css">
+    <link rel="stylesheet" href="../ultraWeb/assets/css/selenio.css">
     <title>UltraCaps Selênio</title>
 </head>
 
 <body>
 
     <header class="header">
-        <img src="./img/selenioProductPg.png" alt="frasco de selênio">
+        <img src="./assets/img/selenioProductPg.png" alt="frasco de selênio">
     </header>
 
     <main class="mainBox">
@@ -32,7 +32,7 @@
         <div class="productDescription">
 
             <div class="cardDescription first">
-                <img src="./img/selenioProductSkinpg.svg" alt="">
+                <img src="./assets/img/selenioProductSkinpg.svg" alt="">
                 <p><span class="firstWordCard">Juventude Eterna:</span> O
                     selênio é um
                     poderoso antioxidante
@@ -48,11 +48,11 @@
                     mantendo seu
                     metabolismo em alta velocidade. <strong>Desperte com energia
                         todas as manhãs!</strong></p>
-                <img src="./img/selenioProductEnergyPg.svg" alt="">
+                <img src="./assets/img/selenioProductEnergyPg.svg" alt="">
             </div>
 
             <div class="cardDescription third">
-                <img src="./img/selenioProductHeartPg.svg" alt="">
+                <img src="./assets/img/selenioProductHeartPg.svg" alt="">
                 <p><span class="firstWordCard">Coração Saudável:</span> ajuda a
                     reduzir a
                     inflamação no
