--- a/ultraWeb/ultracaps.html
+++ b/ultraWeb/ultracaps.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="ultracaps.css">
-    <title>UltraCaps Ultramed</title>
+    <link rel="stylesheet" href="/ultraWeb/assets/css/ultracaps.css">
+    <title>UltraCaps</title>
 </head>
 
 <body>
 
     <div class="header">
-        <img src="./img/ultracapsLogo.svg" alt="">
+        <img src="./assets/img/ultracapsLogo.svg" alt="">
     </div>
 
     <div class="bannerText">
@@ -34,39 +34,39 @@
         <div class="productBox">
 
             <div class="productCard">
-                <img src="./img/ultracapsSelenio.svg" alt="">
+                <img src="./assets/img/ultracapsSelenio.svg" alt="">
                 <a href="./selenio.html" class="productCardTitle">SELÊNIO</a>
             </div>
 
             <div class="productCard">
-                <img src="./img/ultracapsBetacaroteno.svg" alt="">
+                <img src="./assets/img/ultracapsBetacaroteno.svg" alt="">
                 <a class="productCardTitle">BETACAROTENO</a>
             </div>
             <div class="productCard">
-                <img src="./img/ultracapsCalcio.svg" alt="">
+                <img src="./assets/img/ultracapsCalcio.svg" alt="">
                 <a class="productCardTitle">CÁLCIO</a>
             </div>
 
             <div class="productCard">
-                <img src="./img/ultracapsCartilagemTub.svg" alt="">
+                <img src="./assets/img/ultracapsCartilagemTub.svg" alt="">
                 <a class="productCardTitle">CARTILAGEM</a>
             </div>
             <div class="productCard">
-                <img src="./img/ultracapsColageno.svg" alt="">
+                <img src="./assets/img/ultracapsColageno.svg" alt="">
                 <a class="productCardTitle">COLÁGENO</a>
             </div>
 
             <div class="productCard">
-                <img src="./img/ultracapsLicopeno.svg" alt="">
+                <img src="./assets/img/ultracapsLicopeno.svg" alt="">
                 <a class="productCardTitle">LICOPENO</a>
             </div>
             <div class="productCard">
-                <img src="./img/ultracapsLuteina.svg" alt="">
+                <img src="./assets/img/ultracapsLuteina.svg" alt="">
                 <a class="productCardTitle">LUTEÍNA</a>
             </div>
 
             <div class="productCard">
-                <img src="./img/ultracapsPsyllium.svg" alt="">
+                <img src="./assets/img/ultracapsPsyllium.svg" alt="">
                 <a class="productCardTitle">PSYLLIUM</a>
             </div>
         </div>
