--- a/ultraWeb/index.html
+++ b/ultraWeb/index.html
@@ -24,7 +24,7 @@
         <img class="firstOptionImg" src="./assets/img/ofertasQuinzena.svg"
             alt="">
         <a href="./ofertas.html" class="firstOption">
-            OFERTAS v1
+            OFERTAS DA QUINZENA
         </a>
 
         <img class="secondOptionImg" src="./assets/img/semanaBebe.svg" alt="">
