--- a/ultraWeb/index.html
+++ b/ultraWeb/index.html
@@ -21,13 +21,14 @@
 
     <div class="options">
 
-        <img class="firstOptionImg" src="./assets/img/ofertasQuinzena.svg"
+        <img class="firstOptionImg" src="./assets/img/ofertasQuinzenaPNG.png"
             alt="">
         <a href="./ofertas.html" class="firstOption">
             OFERTAS DA QUINZENA
         </a>
 
-        <img class="secondOptionImg" src="./assets/img/semanaBebe.svg" alt="">
+        <img class="secondOptionImg" src="./assets/img/semanaBebePNG.png"
+            alt="">
         <a href="./semBebe.html" class="secondOption">
             SEMANA DO BEBÊ
         </a>
