corrigindo animações e bugs css

--- a/ultraWeb/index.html
+++ b/ultraWeb/index.html
@@ -10,30 +10,34 @@
 </head>
 
 <body>
+    <header>
+        <div class="header">
+            <img src="./assets/img/ultraMedFtLogo.svg" alt=""
+                class="logoTextUltra">
+            <!-- <p class="firstText">FIQUE POR DENTRO</p>
+            <p class="secondText">DE TODAS AS</p>
+            <p class="thirdText">OFERTAS</p> -->
+            <img src="./assets/img/logoUltra.svg" alt="" class="logoUltra">
+        </div>
+    </header>
 
-    <div class="header">
-        <p class="firstText">FIQUE POR DENTRO</p>
-        <p class="secondText">DE TODAS AS</p>
-        <p class="thirdText">OFERTAS</p>
-        <img src="./assets/img/logoUltra.svg" alt="" class="logoUltra">
-    </div>
+    <section class="mainOptions">
+        <div class="options">
 
+            <img class="firstOptionImg"
+                src="./assets/img/ofertasQuinzenaPNG.png" alt="">
+            <a href="./ofertas.html" class="firstOption">
+                OFERTAS DA QUINZENA
+            </a>
 
-    <div class="options">
+            <img class="secondOptionImg" src="./assets/img/semanaBebePNG.png"
+                alt="">
+            <a href="./semBebe.html" class="secondOption">
+                SEMANA DO BEBÊ
+            </a>
 
-        <img class="firstOptionImg" src="./assets/img/ofertasQuinzenaPNG.png"
-            alt="">
-        <a href="./ofertas.html" class="firstOption">
-            OFERTAS DA QUINZENA
-        </a>
-
-        <img class="secondOptionImg" src="./assets/img/semanaBebePNG.png"
-            alt="">
-        <a href="./semBebe.html" class="secondOption">
-            SEMANA DO BEBÊ
-        </a>
-
-    </div>
+        </div>
+    </section>
 
     <div class="carrousel">
 
@@ -42,7 +46,8 @@
 
                 <div class="cardText">
 
-                    <img src="./assets/img/ultracapsLogo.svg" alt="">
+                    <img src="./assets/img/ultracapsLogo.svg"
+                        class="ultracapsLogoCard" alt="">
                     <p class="cardTextUltra">Sua jornada para uma vida mais
                         saudável começa aqui</p>
                 </div>
@@ -61,12 +66,10 @@
             <div class="cardContent">
 
                 <div class="cardText">
-                    <img class="viventeImg" src="./assets/img/ViventeLogo.svg"
-                        alt="">
+                    <img class="viventeLogoCard"
+                        src="./assets/img/ViventeLogo.svg" alt="">
                     <p class="cardTextVivente">Delicie-se com sabores naturais e
-                        frescos,
-                        provenientes
-                        de ingredientes de qualidade, colhidos com carinho.</p>
+                        frescos</p>
                 </div>
 
                 <div class="cardImg">
@@ -102,7 +105,8 @@
 
 
         <div class="logoInicio">
-            <img src="./img/ultraMedFtLogo.svg" alt="">
+            <img src="" alt="">
+            <p>contato</p>
         </div>
 
 
