--- a/ultraWeb/ultracaps.html
+++ b/ultraWeb/ultracaps.html
@@ -10,15 +10,20 @@
 
 <body>
 
-    <div class="header">
-        <img src="./assets/img/ultracapsLogo.svg" alt="">
-    </div>
+    <header>
+        <div class="header">
+            <img src="./assets/img/ultracapsLogo.svg" alt="">
+        </div>
+    </header>
 
-    <div class="bannerText">
-        <p class="firstText">SUA DOSE</p>
-        <p class="secondText">DIÁRIA <span class="dePequenenin">DE</span></p>
-        <p class="thirdText">VITALIDADE</p>
-    </div>
+    <section class="banner">
+        <div class="bannerText">
+            <p class="firstText">SUA DOSE</p>
+            <p class="secondText">DIÁRIA <span class="dePequenenin">DE</span>
+            </p>
+            <p class="thirdText">VITALIDADE</p>
+        </div>
+    </section>
 
     <div class="productShowcase">
 
