link wpp colocado

--- a/ultraWeb/index.html
+++ b/ultraWeb/index.html
@@ -2,6 +2,12 @@
 <html lang="en">
 
 <head>
+    <link rel="preload" fetchpriority="high" as="image"
+        href="./assets/img/gramaFundo.webp" type="image/webp">
+    <link rel="preload" fetchpriority="high" as="image"
+        href="./assets/img/backgroundUltra.svg" type="image/svg">
+    <link rel="preload" fetchpriority="high" as="image"
+        href="./assets/img/backgroundVivente.svg" type="image/svg">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="manifest" href="./manifest.webmanifest" />
@@ -82,7 +88,7 @@
                 <a id="showBtn">Ver Mais</a>
             </div>
         </div>
-        <div class="card">
+        <!-- <div class="card">
             <div class="cardContent">
                 <div class="cardImg">
                     <img src="./assets/img/ultracaps.svg" alt="">
@@ -97,7 +103,7 @@
             <div class="button">
                 <button id="showBtn">Ver Mais</button>
             </div>
-        </div>
+        </div> -->
 
     </div>
 
