--- a/ultraWeb/ofertas.html
+++ b/ultraWeb/ofertas.html
@@ -32,6 +32,13 @@
             <span class="moeda">R$</span>15,99
           </p>
         </div>
+        <div class="pedido">
+          <div class="pedidoBtn">
+            <a
+              href="https://wa.me/5551995850151?text=Ol%c3%a1%2c+tudo+bem%3f%0d%0aGostaria+de+pedir+este+produto%3a%0d%0aDesodorante+Nivea+-+78948748741">Fazer
+              Pedido</a>
+          </div>
+        </div>
       </div>
     </div>
     <div class="divisor">
@@ -57,7 +64,15 @@
           </p>
         </div>
       </div>
+      <div class="pedido">
+        <div class="pedidoBtn">
+          <a
+            href="https://wa.me/5551995850151?text=Ol%c3%a1%2c+tudo+bem%3f%0d%0aGostaria+de+pedir+este+produto%3a%0d%0aLEN%c3%87O+UMEDECIDO+MILI+LOVE+E+CARE+-+78948748741">Fazer
+            Pedido</a>
+        </div>
+      </div>
     </div>
+
     <div class="divisor">
       <img src="../ultraWeb/assets/img/divisorItem.svg" alt="">
     </div>
@@ -78,6 +93,13 @@
           <p class="cost">
             <span class="moeda">R$</span>9,99
           </p>
+        </div>
+      </div>
+      <div class="pedido">
+        <div class="pedidoBtn">
+          <a
+            href="https://wa.me/5551995850151?text=Ol%c3%a1%2c+tudo+bem%3f%0d%0aGostaria+de+pedir+este+produto%3a%0d%0aTOALHAS+UMEDECIDAS+BABY+FREE+-+78948748741">Fazer
+            Pedido</a>
         </div>
       </div>
     </div>
@@ -103,6 +125,13 @@
           </p>
         </div>
       </div>
+      <div class="pedido">
+        <div class="pedidoBtn">
+          <a
+            href="https://wa.me/5551995850151?text=Ol%c3%a1%2c+tudo+bem%3f%0d%0aGostaria+de+pedir+este+produto%3a%0d%0aABSORVENTE+MILI+PROTE%c3%87%c3%83O+TOTAL+-+78948748741">Fazer
+            Pedido</a>
+        </div>
+      </div>
     </div>
     <div class="divisor">
       <img src="../ultraWeb/assets/img/divisorItem.svg" alt="">
@@ -124,6 +153,13 @@
           </p>
         </div>
       </div>
+      <div class="pedido">
+        <div class="pedidoBtn">
+          <a
+            href="https://wa.me/5551995850151?text=Ol%c3%a1%2c+tudo+bem%3f%0d%0aGostaria+de+pedir+este+produto%3a%0d%0aKIT+PANTENE+XPU+%2b+CONDICIONADOR+-+78948748741">Fazer
+            Pedido</a>
+        </div>
+      </div>
     </div>
     <div class="divisor">
       <img src="../ultraWeb/assets/img/divisorItem.svg" alt="">
@@ -143,6 +179,13 @@
           <p class="cost">
             <span class="moeda">R$</span>2,19
           </p>
+        </div>
+      </div>
+      <div class="pedido">
+        <div class="pedidoBtn">
+          <a
+            href="https://wa.me/5551995850151?text=Ol%c3%a1%2c+tudo+bem%3f%0d%0aGostaria+de+pedir+este+produto%3a%0d%0aCREME+DENTAL+CLOSE-UP+-+78948748741">Fazer
+            Pedido</a>
         </div>
       </div>
     </div>
