--- a/ultraWeb/infantil.html
+++ b/ultraWeb/infantil.html
@@ -4,14 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/ultraWeb/assets/css/ofertas.css">
+  <link rel="stylesheet" href="/ultraWeb/assets/css/higieneBeleza.css">
   <title>UltraOfertas</title>
 </head>
 
 <body>
   <div class="header">
-    <p>OFERTAS DA QUINZENA</p>
-    <img src="../ultraWeb/assets/img/calendarIconn.svg" alt="">
+    <p>LINHA INFANTIL</p>
   </div>
 
   <div class="box">
@@ -19,23 +18,23 @@
     <div class="boxCard">
 
       <div class="boxCardImg">
-        <img src="../ultraWeb/assets/img/niveaProd.svg" alt="">
+        <img src="../ultraWeb/assets/img/huggiesSupreme.svg" alt="">
       </div>
       <div class="boxcardText">
         <div class="product">
-          <p class="productTitle">DESODORANTE NÍVEA AEROSSOL</p>
-          <p class="productSpec">200ml - FEMININO</p>
+          <p class="productTitle">FRALDA HUGGIES SUPREME CARE HIPER</p>
+          <p class="productSpec">todos os tamanhos</p>
         </div>
         <div class="productCost">
           <p>POR APENAS:</p>
           <p class="cost">
-            <span class="moeda">R$</span>15,99
+            <span class="moeda">R$</span>74,90 <span class="cada">CADA</span>
           </p>
         </div>
         <div class="pedido">
           <div class="pedidoBtn">
             <a
-              href="https://wa.me/5551995850151?text=Ol%c3%a1%2c+tudo+bem%3f%0d%0aGostaria+de+pedir+este+produto%3a%0d%0aDesodorante+Nivea+-+78948748741">Fazer
+              href="https://wa.me/5551995850151?text=Gostaria+de+pedir+este+produto+%3a%0d%0aHUGGIES+SUPREME+CARE+HIPER%0d%0aValor%3a+74%2c90">Fazer
               Pedido</a>
           </div>
         </div>
@@ -50,24 +49,24 @@
     <div class="boxCard">
 
       <div class="boxCardImg">
-        <img src="../ultraWeb/assets/img/lençoMiliProd.svg" alt="">
+        <img src="../ultraWeb/assets/img/sabHuggies.svg" alt="">
       </div>
       <div class="boxcardText">
         <div class="product">
-          <p class="productTitle">LENÇO UMEDECIDO MILI LOVE E CARE</p>
-          <p class="productSpec">com 100 unidades</p>
+          <p class="productTitle">SABONETE HUGGIES</p>
+          <p class="productSpec">75g</p>
         </div>
         <div class="productCost">
           <p>POR APENAS:</p>
           <p class="cost">
-            <span class="moeda">R$</span>12,99
+            <span class="moeda">R$</span>3,99 <span class="cada">CADA</span>
           </p>
         </div>
       </div>
       <div class="pedido">
         <div class="pedidoBtn">
           <a
-            href="https://wa.me/5551995850151?text=Ol%c3%a1%2c+tudo+bem%3f%0d%0aGostaria+de+pedir+este+produto%3a%0d%0aLEN%c3%87O+UMEDECIDO+MILI+LOVE+E+CARE+-+78948748741">Fazer
+            href="https://wa.me/5551995850151?text=Gostaria+de+pedir+este+produto+%3a%0d%0aSABONETE+HUGGIES+75g%0d%0aValor%3a+3%2c99">Fazer
             Pedido</a>
         </div>
       </div>
@@ -81,24 +80,24 @@
     <div class="boxCard">
 
       <div class="boxCardImg">
-        <img src="../ultraWeb/assets/img/babyfreeProd.svg" alt="">
+        <img src="../ultraWeb/assets/img/dove.svg" alt="">
       </div>
       <div class="boxcardText">
         <div class="product">
-          <p class="productTitle">TOALHAS UMEDECIDAS BABY FREE</p>
-          <p class="productSpec">com 100 unidades</p>
+          <p class="productTitle">SHAMPOO DOVE BABY</p>
+          <p class="productSpec">200ml</p>
         </div>
         <div class="productCost">
           <p>POR APENAS:</p>
           <p class="cost">
-            <span class="moeda">R$</span>9,99
+            <span class="moeda">R$</span>12,99 <span class="cada">CADA</span>
           </p>
         </div>
       </div>
       <div class="pedido">
         <div class="pedidoBtn">
           <a
-            href="https://wa.me/5551995850151?text=Ol%c3%a1%2c+tudo+bem%3f%0d%0aGostaria+de+pedir+este+produto%3a%0d%0aTOALHAS+UMEDECIDAS+BABY+FREE+-+78948748741">Fazer
+            href="https://wa.me/5551995850151?text=Gostaria+de+pedir+este+produto+%3a%0d%0aSHAMPOO+DOVE+BABY+200ml%0d%0aValor%3a+12%2c99">Fazer
             Pedido</a>
         </div>
       </div>
@@ -111,24 +110,24 @@
     <div class="boxCard">
 
       <div class="boxCardImg">
-        <img src="../ultraWeb/assets/img/miliAbsProd.svg" alt="">
+        <img src="../ultraWeb/assets/img/mililenco.svg" alt="">
       </div>
       <div class="boxcardText">
         <div class="product">
-          <p class="productTitle">ABSORVENTE MILI PROTEÇÃO TOTAL</p>
-          <p class="productSpec">com abas 16 unidades</p>
+          <p class="productTitle">TOALHAS UMEDECIDAS MILI BABY</p>
+          <p class="productSpec">com 50 toalhas</p>
         </div>
         <div class="productCost">
           <p>POR APENAS:</p>
           <p class="cost">
-            <span class="moeda">R$</span>6,99
+            <span class="moeda">R$</span>6,99 <span class="cada">CADA</span>
           </p>
         </div>
       </div>
       <div class="pedido">
         <div class="pedidoBtn">
           <a
-            href="https://wa.me/5551995850151?text=Ol%c3%a1%2c+tudo+bem%3f%0d%0aGostaria+de+pedir+este+produto%3a%0d%0aABSORVENTE+MILI+PROTE%c3%87%c3%83O+TOTAL+-+78948748741">Fazer
+            href="https://wa.me/5551995850151?text=Gostaria+de+pedir+este+produto+%3a%0d%0aTOALHAS+UMEDECIDAS+MILI+BABY+50un%0d%0aValor%3a+6%2c99">Fazer
             Pedido</a>
         </div>
       </div>
@@ -139,24 +138,24 @@
     <div class="boxCard">
 
       <div class="boxCardImg">
-        <img src="../ultraWeb/assets/img/kitPanteneProd.svg" alt="">
+        <img src="../ultraWeb/assets/img/miliGiga.svg" alt="">
       </div>
       <div class="boxcardText">
         <div class="product">
-          <p class="productTitle">KIT PANTENE XPU + CONDICIONADOR</p>
-          <p class="productSpec">400ml + 175ml</p>
+          <p class="productTitle">FRALDA MILI BABY GIGA</p>
+          <p class="productSpec">todos os tamanhos</p>
         </div>
         <div class="productCost">
           <p>POR APENAS:</p>
           <p class="cost">
-            <span class="moeda">R$</span>28,90
+            <span class="moeda">R$</span>64,90 <span class="cada">CADA</span>
           </p>
         </div>
       </div>
       <div class="pedido">
         <div class="pedidoBtn">
           <a
-            href="https://wa.me/5551995850151?text=Ol%c3%a1%2c+tudo+bem%3f%0d%0aGostaria+de+pedir+este+produto%3a%0d%0aKIT+PANTENE+XPU+%2b+CONDICIONADOR+-+78948748741">Fazer
+            href="https://wa.me/5551995850151?text=Gostaria+de+pedir+este+produto+%3a%0d%0aFRALDA+MILI+BABY+GIGA%0d%0aValor%3a+64%2c90">Fazer
             Pedido</a>
         </div>
       </div>
@@ -167,24 +166,24 @@
     <div class="boxCard">
 
       <div class="boxCardImg">
-        <img src="../ultraWeb/assets/img/closeupProd.svg" alt="">
+        <img src="../ultraWeb/assets/img/soBaby.svg" alt="">
       </div>
       <div class="boxcardText">
         <div class="product">
-          <p class="productTitle">CREME DENTAL CLOSE-UP</p>
-          <p class="productSpec">70g</p>
+          <p class="productTitle">TALCO INFANTIL SÓ BABY</p>
+          <p class="productSpec">200g</p>
         </div>
         <div class="productCost">
           <p>POR APENAS:</p>
           <p class="cost">
-            <span class="moeda">R$</span>2,19
+            <span class="moeda">R$</span>14,99 <span class="cada">CADA</span>
           </p>
         </div>
       </div>
       <div class="pedido">
         <div class="pedidoBtn">
           <a
-            href="https://wa.me/5551995850151?text=Ol%c3%a1%2c+tudo+bem%3f%0d%0aGostaria+de+pedir+este+produto%3a%0d%0aCREME+DENTAL+CLOSE-UP+-+78948748741">Fazer
+            href="https://wa.me/5551995850151?text=Gostaria+de+pedir+este+produto+%3a%0d%0aTALCO+INFANTIL+S%c3%93+BABY+200g%0d%0aValor%3a+14%2c99">Fazer
             Pedido</a>
         </div>
       </div>
@@ -192,6 +191,7 @@
     <div class="divisor">
       <img src="../ultraWeb/assets/img/divisorItem.svg" alt="">
     </div>
+
   </div>
 
 </body>
