--- a/ultraWeb/selenio.html
+++ b/ultraWeb/selenio.html
@@ -27,6 +27,14 @@
                 apenas em
                 pequenas quantidades, desempenha diversas funções essenciais</p>
         </div>
+        <div class="fazerPedido">
+            <div class="firstText">
+                <p>Peça já o SEU</p>
+            </div>
+            <div class="secondText">
+                <a class="link" href="#">WhatsApp</a>
+            </div>
+        </div>
         <div class="subtitle">BENEFÍCIOS</div>
 
         <div class="productDescription">
@@ -63,7 +71,10 @@
             </div>
 
         </div>
+
     </main>
+
+
 
 </body>
 
