--- a/ultraWeb/ultracaps.html
+++ b/ultraWeb/ultracaps.html
@@ -45,34 +45,36 @@
 
             <div class="productCard">
                 <img src="./assets/img/ultracapsBetacaroteno.svg" alt="">
-                <a class="productCardTitle">BETACAROTENO</a>
+                <a href="./betacaroteno.html"
+                    class="productCardTitle">BETACAROTENO</a>
             </div>
             <div class="productCard">
                 <img src="./assets/img/ultracapsCalcio.svg" alt="">
-                <a class="productCardTitle">CÁLCIO</a>
+                <a href="./calcio.html" class="productCardTitle">CÁLCIO</a>
             </div>
 
             <div class="productCard">
                 <img src="./assets/img/ultracapsCartilagemTub.svg" alt="">
-                <a class="productCardTitle">CARTILAGEM</a>
+                <a href="./cartilagem.html"
+                    class="productCardTitle">CARTILAGEM</a>
             </div>
             <div class="productCard">
                 <img src="./assets/img/ultracapsColageno.svg" alt="">
-                <a class="productCardTitle">COLÁGENO</a>
+                <a href="./colageno.html" class="productCardTitle">COLÁGENO</a>
             </div>
 
             <div class="productCard">
                 <img src="./assets/img/ultracapsLicopeno.svg" alt="">
-                <a class="productCardTitle">LICOPENO</a>
+                <a href="./licopenoo.html" class="productCardTitle">LICOPENO</a>
             </div>
             <div class="productCard">
                 <img src="./assets/img/ultracapsLuteina.svg" alt="">
-                <a class="productCardTitle">LUTEÍNA</a>
+                <a href="./luteina.html" class="productCardTitle">LUTEÍNA</a>
             </div>
 
             <div class="productCard">
                 <img src="./assets/img/ultracapsPsyllium.svg" alt="">
-                <a class="productCardTitle">PSYLLIUM</a>
+                <a href="./psyllium.html" class="productCardTitle">PSYLLIUM</a>
             </div>
         </div>
     </div>
